welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
 def haveBaggle():Boolean = {
   if (estSurBiscuit()) {x=x+1}
    def vuBiscuit():Boolean = ( if x=1) {return true} else {return true}

    
    
    
    if (vuBiscuit() == true) {return false;} else {return true;}
 
}